[build-system]
requires = [
    "setuptools>=69",
    "wheel",
    "setuptools_scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "cube-wrangler"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lark>=1.2.2",
    "partridge>=1.1.2",
    "unidecode>=1.4.0",
]

[dependency-groups]
doc = [
    "json5",
    "jsonschema",
    "Markdown",
    "markdown-it-py",
    "mike",
    "mkdocs",
    "mkdocs-autorefs",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-jupyter",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-table-reader-plugin",
]

[tool.uv]
default-groups = ["doc"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true