[build-system]
requires = [
    "setuptools>=69",
    "wheel",
    "setuptools_scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "cube-wrangler"
version = "0.2.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.1.1",
    "lark>=1.2.2",
    "network-wrangler>=1.0b3",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "partridge>=1.1.2",
    "projectcard>=0.3.3",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "black",
    "pytest",
]
doc = [
    "black",
    "json5",
    "jsonschema",
    "Markdown",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.15",
    "mkdocs-material-extensions",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocs-table-reader-plugin>=3.1.0",
    "mkdocstrings",
    "mkdocstrings[python]>=0.29.1",
]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
